--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^4.11.0",
     "next": "^13.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
